MAjor CSS Consolidation and changes.

--- a/packages/ui/src/styles/index.css
+++ b/packages/ui/src/styles/index.css
@@ -1,3 +1,5 @@
 @import './tokens.css';
 @import './components.css';
 @import './liquid-glass.css';
+@import './utilities.css';
+@import './event-log.css';
